# wasm_laughing_man_demo

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.svelte
src/lib/: Hamburger.svelte  Header.svelte  Sidebar.svelte  SidebarSync.svelte  WasmApp.svelte  wasm_app.ts
wasm/: Cargo.toml
wasm/pkg/: laughing_man_wasm.d.ts  laughing_man_wasm.js  laughing_man_wasm_bg.wasm  laughing_man_wasm_bg.wasm.d.ts  package.json
wasm/src/: canvas_app.rs  dom_utils.rs  face_detection.rs  lib.rs  tracker.rs  tracker_roi.rs
