[package]
name = "laughing-man-wasm"
version = "0.1.0"
authors = ["deepgreenAN <asami73dgreen63@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.78", features = ['serde-serialize']}
js-sys = "0.3.55"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen-futures = "0.4.28"
serde = { version = "1.0.130", features = ["derive"] }
rustface = { version = "0.1.7", default-features = false}
#image = "0.23.14"
bytes = "1.1.0"
reqwest-wasm = "0.11.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
opt-level = 3

[dependencies.web-sys]
version = "0.3.55"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'HtmlCanvasElement',
    'Window',
    'Performance',
    'Navigator',
    'HtmlVideoElement',
    'MediaStreamConstraints',
    'MediaStream',
    'MediaDevices',
    'ImageData',
    'HtmlElement',
    'Element',
    'HtmlImageElement',
    'CssStyleDeclaration',
    'Node'
]